<resources>
    <string name="app_name">self-productivity-app</string>
    <string name="action_history">History</string>
    <string name="action_summary">Summary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="history_fragment_label">History Fragment</string>
    <string name="previous">Previous</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>

    <string name="hello_world">Hello World!</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="count_button_text">Count</string>
    <string name="day_format">Day Selected: %d</string>

    <string name="month"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_page">History Page</string>
    <string name="dateView">huh</string>
    <string name="topCatPlaceholder">未完成: As you change months, this shows top activities for that month</string>
    <string name="start_time_field_text">Start time</string>
    <string name="end_time_field_text">End time</string>
    <string name="category_field_text">Category</string>
    <string name="category_hint">Exercise</string>
    <string name="activity_description_field_text">Activity Description</string>
    <string name="add_new_entry_button_text">add new entry</string>

    <string name="minutes">Duration: %02dm</string>
    <string name="hours_and_minutes">Duration: %02dh %02dm</string>
</resources>