<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
>

    <data>
        <variable
            name="entryViewModel"
            type="com.example.selfproductivityapp.entry.EntryViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".entry.EntryFragment">

        <RelativeLayout
            android:id="@+id/form_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/new_entry_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Add new entry"
                    android:textSize="38sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@id/start_time_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_entry_banner"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/startTimeFieldText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/start_time_field_text"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/startTime"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="08:00"
                    android:inputType="time"
                    android:text="@={entryViewModel.startTime}" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/end_time_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_time_wrapper"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/endTimeFieldText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/end_time_field_text"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/endTime"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="08:00"
                    android:inputType="time"
                    android:text="@={entryViewModel.endTime}" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/end_time_wrapper"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/categoryFieldText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/category_field_text"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/categoryTime"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/category_hint"
                    android:text="@={entryViewModel.newThing.category}"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/description_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_wrapper"
                android:layout_margin="5dp">

                <LinearLayout
                    android:id="@+id/description_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/description_field_text"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:paddingLeft="10dp"
                        android:text="@string/activity_description_field_text"
                        android:textSize="28sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_banner">

                    <EditText
                        android:id="@+id/descriptionTextMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:text="@={entryViewModel.newThing.description}"
                        android:inputType="textMultiLine" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/new_entry_button_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_wrapper"
                android:gravity="center"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/save_new_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> entryViewModel.onAddNewEntry()}"
                    android:text="@string/add_new_entry_button_text" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="50dp"
                android:layout_height="100dp"
                android:layout_below="@id/new_entry_button_wrapper">

            <TextView
                android:id="@+id/dateOfEntry"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textSize="28sp"
                android:text="@{entryViewModel.date}"/>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>






</layout>